--- a/style.css
+++ b/style.css
@@ -1,6 +1,89 @@
 body{
+    margin: 0;
+    padding-top: 800px;
     text-align: center;
 }
-h1 {
-    color:rgb(9, 250, 9);
+.profile{
+    border-radius: 50%;
+}
+#welcome{
+    position:absolute;
+    bottom: 0;
+    background: linear-gradient(#1607ee 20%, #22ee07 80%);
+    display: table;
+width: 100%;
+height: 100%;
+}
+h1{
+    font-size: 40px;
+    font-family: Arial;
+    font-weight: 300;
+}
+#name{
+    font-size: 50px;
+    font-family: cursive;
+}
+h2{
+    font-size: 30px;
+    font-weight: 300;
+    font-family: monospace;
+}
+#bio{
+    font-family: cursive;
+    padding: 50px;
+}
+.line{
+    height: 6px;
+    background-color: red;
+    width: 60px;
+    margin: 8px auto;
+}
+.parallax-inner{
+    display: table-cell;
+    vertical-align: middle;
+}
+.MENU{
+    list-style: none ;
+    position: fixed;
+    background-color: antiquewhite;
+    width: 100%;
+    margin-top: 0px;
+    top: 10px;
+    right: 30px;
+    z-index: 10;
+    cursor: pointer;
+}
+.link{
+    float: left;
+    padding-top: 5px;
+    padding-left: 33px;
+    padding-right: 25px;
+    padding-bottom: 5px;
+    font-family: fantasy;
+    font-size: 20px;
+    display: inline;
+
+}
+.link:hover{
+    font-size: 25px;
+    text-decoration: underline;
+}
+a{
+    text-decoration: none;
+}
+#escritos a{
+    text-decoration: underline !important;
+    color: #22ee07 !important;
+}
+#contato{
+    background-color: #22ee07;
+}
+#contato iframe{
+    width: 100%;
+}
+.contato_1 h3{
+    display: inline;
+}
+img{
+    width: 35%;
 }
